[package]
authors = ["you"]
default-run = "app"
description = "A Tauri App"
edition = "2021"
license = "GPL-3.0-or-later"
name = "app"
repository = ""
rust-version = "1.59"
version = "1.0.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = {version = "1.2.1", features = [] }

[dependencies]
base64 = "0.21.0"
mime = "0.3.17"
png = "0.17.6"
png-libimagequant = {path = "../png-libimagequant"}
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = {version = "1.3.0", features = ["dialog-message", "dialog-open", "dialog-save", "fs-read-file", "path-all", "shell-open", "window-close", "window-hide", "window-maximize", "window-minimize", "window-show", "window-start-dragging", "window-unmaximize", "window-unminimize"] }
window-shadows = "0.2.1"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
